--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body id="backtotop" class="p-5">
     <section class="bg-gradient-to-tl from-indigo-300 rounded-lg p-5 mb-5">
-      <div id="home" class="container mx-auto">
+      <div id="home" class=" mx-auto">
         <div class="lg:flex">
           <span class="font-bold text-xl text-black tracking-wider"
             >SANTHOSH MAHAMUNIAPPAN S
