--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
     </section>
     <section class="bg-gradient-to-tl from-gray-400 rounded-lg p-5 mb-5">
-      <div id="aboutMe">
+      <div id="aboutMe" class="lg:flex">
         <h2 class="text-center text-3xl font-bold mb-4">
           Professional Profile
         </h2>
