--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
       </div>
     </section>
     <section class="bg-gradient-to-tl from-gray-400 rounded-lg p-5 mb-5">
-      <div id="aboutMe" class="lg:flex">
+      <div id="aboutMe">
         <h2 class="text-center text-3xl font-bold mb-4">
           Professional Profile
         </h2>
-        <div class="2xl:flex">
+        <div class="xl:flex">
           <div class="md:w-1/2 md:mt-5">
             <img
               src="assets\myimage.jpg"
