--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           Professional Profile
         </h2>
         <div class="xl:flex">
-          <div class="md:w-1/2 md:mt-5">
+          <div class="lg:w-1/2 lg:mt-5">
             <img
               src="assets\myimage.jpg"
               class="rounded-sm w-fit h-fit mx-0 md:w-96 md:h-auto md:mr-4 md:rounded-s-3xl shadow-2xl md:mx-60 hover:transform hover:scale-110 hover:tranform duration-300"
