--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h2 class="text-center text-3xl font-bold mb-4">
           Professional Profile
         </h2>
-        <div class="xl:flex">
+        <div class="lg:flex">
           <div class="lg:w-1/2 lg:mt-5">
             <img
               src="assets\myimage.jpg"
