--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               alt="Image"
             />
           </div>
-          <div class="lg:w-1/2">
+          <div class="md:w-1/2">
             <h2
               class="font-semibold text-lg text-center mt-2 lg:font-extrabold lg:text-xl text-gray-900 lg:mr-2"
             >
