--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
           <div class="lg:w-1/2 lg:mt-5">
             <img
               src="assets\myimage.jpg"
-              class="rounded-sm w-fit h-fit mx-0 md:w-96 md:h-auto md:mr-4 md:rounded-s-3xl shadow-2xl md:mx-60 hover:transform hover:scale-110 hover:tranform duration-300"
+              class="rounded-sm w-fit h-fit mx-0 lg:w-96 lg:h-auto lg:mr-4 lg:rounded-s-3xl shadow-2xl lg:mx-60 hover:transform hover:scale-110 hover:tranform duration-300"
               alt="Image"
             />
           </div>
-          <div class="md:w-1/2">
+          <div class="lg:w-1/2">
             <h2
               class="font-semibold text-lg text-center mt-2 lg:font-extrabold lg:text-xl text-gray-900 lg:mr-2"
             >
