--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="lg:w-1/2 lg:mt-5">
             <img
               src="assets\myimage.jpg"
-              class="rounded-sm w-fit h-fit mx-0 lg:w-96 lg:h-auto lg:mr-4 lg:rounded-s-3xl shadow-2xl lg:mx-60 hover:transform hover:scale-110 hover:tranform duration-300"
+              class="rounded-sm w-fit h-fit mx-0 lg:w-auto lg:h-auto lg:mr-4 lg:rounded-s-3xl shadow-2xl lg:mx-32 hover:transform hover:scale-110 hover:tranform duration-300"
               alt="Image"
             />
           </div>
