--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
             />
           </div>
           <div class="lg:w-1/2">
-            <h2
+            <div class="w-56">
+              <h2
               class="font-semibold text-lg text-center mt-2 lg:font-extrabold lg:text-xl text-gray-900 lg:mr-2"
             >
               Proficient and sound understanding of the fundamentals of below
@@ -246,6 +247,8 @@
                 </div>
               </div>
             </div>
+            </div>
+            
           </div>
         </div>
         <div class="flex mt-10 mx-auto">
