--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
           <div class="lg:w-1/2">
             <h2
-              class="font-semibold text-lg text-center mt-2 lg:font-bold lg:text-xl text-gray-900 lg:mr-2"
+              class="font-semibold text-lg text-center mt-2 lg:font-bold lg:text-base text-gray-900 lg:mr-2"
             >
               Proficient and sound understanding of the fundamentals of below
               Skills
