--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
           Professional Profile
         </h2>
         <div class="lg:flex border border-black">
-          <div class="lg:w-1/2 lg:mt-5">
+          <div class="lg:w-1/2 lg:mt-5 border border-black">
             <img
               src="assets\myimage.jpg"
               class="rounded-sm w-fit h-fit mx-0 lg:w-96 lg:h-auto lg:mr-4 lg:rounded-s-3xl shadow-2xl lg:mx-36 hover:transform hover:scale-110 hover:tranform duration-300"
               alt="Image"
             />
           </div>
-          <div class="lg:w-1/2">
+          <div class="lg:w-1/2 border border-black">
             <h2
               class="font-semibold text-lg text-center mt-2 lg:font-bold lg:text-xl text-gray-900 lg:mr-1"
             >
