--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
           <div class="lg:w-1/2 border border-black">
             <h2
-              class="font-semibold text-lg text-center mt-2 lg:font-bold lg:text-xl text-gray-900 lg:mr-1"
+              class="font-semibold text-lg text-center mt-2 lg:font-semibold lg:text-xl text-gray-900 lg:mr-1"
             >
               Proficient and sound understanding of the fundamentals of below
               Skills
